# cdar

./: .gitignore  LICENSE  README.md  README.org  cdar.cabal  package.yaml
bench/: BinSplitPar.hs  bench-thread.hs  bench-transcend.hs  bench.hs
examples/: BinSplit.hs  BinSplitPar.hs  BinarySplit  BinarySplit.hs  BinarySplitPar.hs  ExamplesRump.hs  Lll.hs  Logistic.hs  Main.hs  SinBorwein.hs  bounded.lll  zero.lll
examples/lll/: Main.hs
examples/logistic/: Main.hs
manifold/: Main.hs
oldexamples/: BinSplit.hs  BinSplitPar.hs  BinarySplit.hs  BinarySplitPar.hs
src/: Time  Time.hs
src/Data/: CDAR.hs
src/Data/CDAR/: Approx.hs  BR.hs  CR.hs  Classes.hs  Complex.hs  Dyadic.hs  Extended.hs  IntegerLog.hs  Interval.hs  PL.hs  POrd.hs
test/: Test.hs  Tests.hs
testsuite/: Tests.hs
